# methanol-flow-prediction

./: README.md  data_loader.py  pyproject.toml
datasets/: flowspeeds.xlsx  threshold.xlsx
datasets/mfp/: april-flowspeed.csv  flowspeeds.xlsx  test_data.csv  train_data.back1.csv  train_data.csv  train_data_1.csv  train_data_4.csv  模型评价指标.docx
datasets/raw/: april-flowspeed.csv  流量.xlsx
notebook/: lightning_lstm.ipynb  lstm.ipynb  mylib.py  performance.ipynb  preprocess.ipynb  rnn.ipynb  woa.ipynb  woa_lstm.ipynb
notebook/lib/: whale_optimization.py
src/: data_loader.py  example.ipynb  main.py  utils.py
tests/: data_loader_tests.py  pytorch_test.py
